--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/redux-thunk": "^2.1.0",
     "antd": "^5.2.0",
     "axios": "^1.3.2",
+    "datejs": "^1.0.0-rc3",
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
